<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie Log</string>
    <string name="movie_list">Llista de pel·lícules</string>
    <string name="movie_title">Títol de la pel·lícula</string>
    <string name="movie_description">Descripció de la pel·lícula</string>
    <string name="movie_poster">Pòster de la pel·lícula</string>
    <string name="popular_movies">Pel·lícules populars</string>
    <string name="popular">Popular</string>
    <string name="search_result">Resultat de la búsqueda</string>
    <string name="search_movies">Busca pel·lícules…</string>
    <string name="error_loading_movies">Error carregant les pel·lícules</string>
    <string name="web_client_id" tools:ignore="TypographyDashes">630102849165-7eulf9nak3gpt0ht7opfn45hgbrb23l8.apps.googleusercontent.com</string>
    <string name="watch_trailer">Veure tràiler</string>
    <string name="tmdb_api_key">4a5cbff143eda90e596622878aaa6354</string>
    <string name="login_with_google">Inicia sessió amb Google</string>
    <string name="google_signin_failed">Ha fallat l\'inici de sessió amb Google</string>
    <string name="user">Usuari</string>
    <string name="logout">Tancar sessió</string>
    <string name="name">Nom</string>
    <string name="email">Correu electrònic</string>
    <string name="profile_picture">Imatge de perfil</string>
    <string name="search_results">Resultats de la búsqueda</string>
    <string name="save_favorite">Guardar en favorits</string>
    <string name="error_loading_trailer">Error carregant el tràiler</string>
    <string name="favorite_movies">Pel·lícules favorites</string>
    <string name="profile">Perfil</string>
    <string name="open_profile">Obrir perfil</string>
    <string name="mark_as_watched">Marcar com a vista</string>
    <string name="remove_from_watched">Eliminar de vistes</string>
    <string name="watched_movies">Pel·lícules vistes</string>
    <string name="watched_at">Vista el: %s</string>
    <string name="login_not_completed">No s\'ha iniciat sessió"</string>
    <string name="movie_detail">Detalls de la pel·lícula</string>
    <string name="removed_from_favorites">Afegida a favorites</string>
    <string name="added_to_favorites">Eliminada de favorites</string>
    <string name="removed_from_watched">Afegida a vistes</string>
    <string name="marked_as_watched">Eliminada com a vista</string>
    <string name="error_adding_favorite">Error afegint a favorites</string>
    <string name="error_checking_favorite">Error comprovant si és favorita</string>
    <string name="error_removing_favorite">Error eliminant favorita</string>
    <string name="error_loading_favorites">Error carregant favorites</string>
    <string name="error_marking_watched">Error marcant com a vista</string>
    <string name="error_removing_watched">Error eliminant de vistes</string>
    <string name="error_checking_watched">Error comprovant si és vista</string>
    <string name="error_loading_history">Error carregant historial</string>
    <string name="error_loading_popular_movies">Error carregant pel·lícules populars</string>
    <string name="error_searching_movies">Error buscant pel·lícules</string>
</resources>