<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <!-- Imatge d'usuari -->
    <ImageView
        android:id="@+id/image_user_photo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/ic_user" />

    <!-- Nom usuari -->
    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_user_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <!-- Email usuari -->
    <TextView
        android:id="@+id/text_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/email"
        android:textSize="16sp"
        android:layout_marginTop="2dp" />

    <!-- Botó favorites -->
    <Button
        android:id="@+id/button_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/favorite_movies"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/rounded_button" />

    <!-- Botó vistes -->
    <Button
        android:id="@+id/button_watched"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/watched_movies"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/rounded_button" />

    <!-- Botó logout -->
    <Button
        android:id="@+id/button_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_watched"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/logout"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/rounded_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
